@@ -29,6 +29,11 @@ _start:
 	# push with a 4-byte immediate
 	try	0x68, 0x01, 0x02, 0x03, 0x04
 
+	# push a segment register
+	try	0x0f, 0xa8
+	# with extraneous rex.B
+	try	0x41, 0x0f, 0xa8
+
 	# This is just to synchronize the disassembly.
 	# Any new cases must come before this line!
 	nop
