@@ -41,6 +41,14 @@
 
 2012-08-06  Roland McGrath  <mcgrathr@google.com>
 
+	* gas/i386/x86-64-stack.s: Add cases for push segment register.
+	* gas/i386/x86-64-stack.d: Updated.
+	* gas/i386/x86-64-stack-suffix.d: Updated.
+	* gas/i386/x86-64-stack-intel.d: Updated.
+	* gas/i386/ilp32/x86-64-stack.d: Updated.
+	* gas/i386/ilp32/x86-64-stack-suffix.d: Updated.
+	* gas/i386/ilp32/x86-64-stack-intel.d: Updated.
+
 	* gas/i386/x86-64-stack.s: Add cases for push immediate.
 	* gas/testsuite/gas/i386/ilp32/x86-64-stack-intel.d: Updated.
 	* gas/testsuite/gas/i386/ilp32/x86-64-stack-suffix.d: Updated.
